Fix jumping editable regression due to tag colors in metadata panel. Tweak icon spacing.

--- a/src/stylesheets/components/_editable.scss
+++ b/src/stylesheets/components/_editable.scss
@@ -10,7 +10,6 @@
     weight: inherit;
   }
   text-align: inherit;
-  position: relative;
   margin: -($editable-border-width + $editable-padding-horizontal);
   width: calc(
     100% + #{2 * ($editable-border-width + $editable-padding-horizontal)}
